fixing some margin issues

--- a/CapEAT/UI_CapEat/src/app/Home/home.component.css
+++ b/CapEAT/UI_CapEat/src/app/Home/home.component.css
@@ -7,6 +7,7 @@
     width: 700px;
     margin-right: 10px;
     margin-left: 50px;
+    
   
   
   }
@@ -20,7 +21,9 @@
    margin: 0;
    padding: 0;
    width: 100%;
-   height: 400px;
+   height: 500px;
+  
+   
    
    
   
@@ -30,8 +33,10 @@
 
   
 .carousel {
-    width: 700px;
+   
     margin: auto;
+    width: 700px;
+    margin-top: 90px;
     
 
 }
@@ -84,6 +89,9 @@
 
   .container {
      width: 750px;
+     height: 500px;
+     
+
      
     
 
