--- a/CapEAT/UI_CapEat/src/app/thankyou/thankyou.component.html
+++ b/CapEAT/UI_CapEat/src/app/thankyou/thankyou.component.html
@@ -1,5 +1,6 @@
-<div class="container-fluid"></div>
-<div class="jumbotron text-xs-center">
+<body>
+<div class="container-fluid">
+
   <h1 class="display-3">Thank You! Your Order is confirmed</h1>
   <p>
     <strong>Please check your email</strong> for further instructions</p>
@@ -67,10 +68,12 @@
   </div>
 
 
-  <hr>
+ 
   <p>
     Having trouble?
     <a href="mailto:angulareater@capone.com">Contact us</a>
   </p>
 
 </div>
+
+</body>
