--- a/CapEAT/UI_CapEat/src/app/thankyou/thankyou.component.css
+++ b/CapEAT/UI_CapEat/src/app/thankyou/thankyou.component.css
@@ -17,6 +17,20 @@
     
  }
 
+ .body {
+    background-color: #7395AE;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    
+}
+
+.container-fluid {
+    background-color: #7395AE;
+    height: 700px;
+}
+
+
 
  @import "//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css";
  @import "http://fonts.googleapis.com/css?family=Roboto:400,500";
