--- a/CapEAT/UI_CapEat/src/app/payment/payment.component.html
+++ b/CapEAT/UI_CapEat/src/app/payment/payment.component.html
@@ -5,7 +5,6 @@
     <input name="options" ng-control="options" type="radio" [value]="2" [(ngModel)]="option" id="existingcard">
     <br/>
 </div>
-
 <div *ngIf="option === 1">
     <div class="container-fluid py-3">
         <div class="row">
@@ -35,17 +34,17 @@
                             </div>
                             <div class="form-group">
                                 <label for="cc-payment" class="control-label mb-1">Payment amount</label>
-                                <input id="cc-pament" name="cc-payment" type="text" class="form-control" aria-required="true" aria-invalid="false" value="100.00">
+                                <input id="cc-pament" name="cc-payment" type="text" [value]="total" readonly class="form-control" aria-required="true" aria-invalid="false" value="100.00">
                             </div>
                             <div class="form-group has-success">
                                 <label for="cc-name" class="control-label mb-1">Name on card</label>
-                                <input id="cc-name" name="cc-name" type="text" class="form-control cc-name valid" data-val="true" data-val-required="Please enter the name on card"
+                                <input id="cc-name" name="cc-name" [(ngModel)]="name" type="text" class="form-control cc-name valid" data-val="true" data-val-required="Please enter the name on card"
                                     autocomplete="cc-name" aria-required="true" aria-invalid="false" aria-describedby="cc-name-error">
                                 <span class="help-block field-validation-valid" data-valmsg-for="cc-name" data-valmsg-replace="true"></span>
                             </div>
                             <div class="form-group">
                                 <label for="cc-number" class="control-label mb-1">Card number</label>
-                                <input id="cc-number" name="cc-number" type="tel" class="form-control cc-number identified visa" value="" data-val="true"
+                                <input id="cc-number" name="cc-number" type="tel" [(ngModel)]="cardnum" class="form-control cc-number identified visa" value="" data-val="true"
                                     data-val-required="Please enter the card number" data-val-cc-number="Please enter a valid card number"
                                     autocomplete="cc-number">
                                 <span class="help-block" data-valmsg-for="cc-number" data-valmsg-replace="true"></span>
@@ -54,7 +53,7 @@
                                 <div class="col-6">
                                     <div class="form-group">
                                         <label for="cc-exp" class="control-label mb-1">Expiration</label>
-                                        <input id="cc-exp" name="cc-exp" type="tel" class="form-control cc-exp" value="" data-val="true" data-val-required="Please enter the card expiration"
+                                        <input id="cc-exp" name="cc-exp" type="tel" [(ngModel)]="exp" class="form-control cc-exp" value="" data-val="true" data-val-required="Please enter the card expiration"
                                             data-val-cc-exp="Please enter a valid month and year" placeholder="MM / YY" autocomplete="cc-exp">
                                         <span class="help-block" data-valmsg-for="cc-exp" data-valmsg-replace="true"></span>
                                     </div>
@@ -62,7 +61,7 @@
                                 <div class="col-6">
                                     <label for="x_card_code" class="control-label mb-1">Security code</label>
                                     <div class="input-group">
-                                        <input id="x_card_code" name="x_card_code" type="tel" class="form-control cc-cvc" value="" data-val="true" data-val-required="Please enter the security code"
+                                        <input id="x_card_code" name="x_card_code" [(ngModel)]="seccode" type="tel" class="form-control cc-cvc" value="" data-val="true" data-val-required="Please enter the security code"
                                             data-val-cc-cvc="Please enter a valid security code" autocomplete="off">
                                         <div class="input-group-addon">
                                             <span class="fa fa-question-circle fa-lg" data-toggle="popover" data-container="body" data-html="true" data-title="Security Code"
@@ -74,25 +73,22 @@
                             </div>
                             <div class="form-group">
                                 <label for="x_zip" class="control-label mb-1">Zip code</label>
-                                <input id="x_zip" name="x_zip" type="text" class="form-control" value="" data-val="true" data-val-required="Please enter the ZIP/Postal code"
+                                <input id="x_zip" name="x_zip" type="text" [(ngModel)]="postalcode" class="form-control" value="" data-val="true" data-val-required="Please enter the ZIP/Postal code"
                                     autocomplete="postal-code">
                                 <span class="help-block" data-valmsg-for="x_zip" data-valmsg-replace="true"></span>
                             </div>
                             <form action="#" onsubmit="if(document.getElementById('agree').checked) { return true; } else { alert('Please indicate that you have read and agree to the Terms and Conditions and Privacy Policy'); return false; }">
                                 <input type="checkbox" name="checkbox" value="check" id="agree" /> I have read and agree to the Terms and Conditions.
                                 <br>
-                                <input type="checkbox" name="checkbox" value="check" id="save" /> Please save my card information for future use.
+                                <input type="checkbox" name="checkbox" [(ngModel)]="savecard" value="check" id="save" /> Please save my card information for future use.
                                 <br>
                                 <br>
                             </form>
-
-
                             <div>
-                                <button id="payment-button" type="submit" class="btn btn-lg btn-info btn-block">
+                                <button id="payment-button" type="submit" [routerLink]='thankyou' (click)='fetch()' class="btn btn-lg btn-info btn-block">
                                     <i class="fa fa-lock fa-lg"></i>&nbsp;
                                     <span id="payment-button-amount">Pay</span>
                                     <span id="payment-button-sending" style="display:none;">Sending…</span>
-
                                 </button>
                             </div>
                         </form>
@@ -101,10 +97,8 @@
             </div>
         </div>
     </div>
-
 </div>
 <div *ngIf="option ===2">
-
     <div class="container-fluid py-3">
         <div class="row">
             <div class="col-12 col-sm-8 col-md-6 col-lg-4 mx-auto">
@@ -133,11 +127,11 @@
                             </div>
                             <div class="form-group">
                                 <label for="cc-payment" class="control-label mb-1">Payment amount</label>
-                                <input id="cc-pament" name="cc-payment" type="text" class="form-control" aria-required="true" aria-invalid="false" value="100.00">
+                                <input id="cc-pament" name="cc-payment" type="text" readonly [value]="total" class="form-control" aria-required="true" aria-invalid="false" value="100.00">
                             </div>
                             <div class="form-group">
                                 <label for="cc-number" class="control-label mb-1">Existing Card number</label>
-                                <input id="cc-number" name="cc-number" type="tel" class="form-control cc-number identified visa" value="" data-val="true"
+                                <input id="cc-number" name="cc-number" type="tel" readonly [value]="existingcard" class="form-control cc-number identified visa" value="" data-val="true"
                                     data-val-required="Please enter the card number" data-val-cc-number="Please enter a valid card number"
                                     autocomplete="cc-number">
                                 <span class="help-block" data-valmsg-for="cc-number" data-valmsg-replace="true"></span>
@@ -148,25 +142,22 @@
                             </div>
                             <div class="form-group">
                                 <label for="x_zip" class="control-label mb-1">Zip code</label>
-                                <input id="x_zip" name="x_zip" type="text" class="form-control" value="" data-val="true" data-val-required="Please enter the ZIP/Postal code"
+                                <input id="x_zip" name="x_zip" type="text" [(ngModel)]="postalcode" class="form-control" value="" data-val="true" data-val-required="Please enter the ZIP/Postal code"
                                     autocomplete="postal-code">
                                 <span class="help-block" data-valmsg-for="x_zip" data-valmsg-replace="true"></span>
                             </div>
                             <form action="#" onsubmit="if(document.getElementById('agree').checked) { return true; } else { alert('Please indicate that you have read and agree to the Terms and Conditions and Privacy Policy'); return false; }">
                                 <input type="checkbox" name="checkbox" value="check" id="agree" /> I have read and agree to the Terms and Conditions.
                                 <br>
-                                <input type="checkbox" name="checkbox" value="check" id="save" /> Please delete my card information.
+                                <input type="checkbox" name="checkbox" value="check" id="save" [(ngModel)]="deletecard"/> Please delete my card information.
                                 <br>
                                 <br>
                             </form>
-
-
                             <div>
-                                <button id="payment-button" type="submit" class="btn btn-lg btn-info btn-block">
+                                <button id="payment-button" (click)='fetch()' type="submit" class="btn btn-lg btn-info btn-block">
                                     <i class="fa fa-lock fa-lg"></i>&nbsp;
                                     <span id="payment-button-amount">Pay</span>
                                     <span id="payment-button-sending" style="display:none;">Sending…</span>
-
                                 </button>
                             </div>
                         </form>
