--- a/CapEAT/UI_CapEat/src/app/Home/home.component.html
+++ b/CapEAT/UI_CapEat/src/app/Home/home.component.html
@@ -244,7 +244,7 @@
 					<div *ngIf="userstatus==='Fail'"><span style="color:red;">Authentication Failed!! Please try again</span> </div>
 					<hr>
 					<label>Username</label>
-					<input type="text" class="form-control" placeholder="miu834" [(ngModel)]="eid" id="eid" name="eid" required autofocus>
+					<input type="text" class="form-control" placeholder="abc123" [(ngModel)]="eid" id="eid" name="eid" required autofocus>
 				</div>
 
 				<div class="input">
