--- a/CapEAT/UI_CapEat/src/app/Addcart/addcart.component.css
+++ b/CapEAT/UI_CapEat/src/app/Addcart/addcart.component.css
@@ -106,7 +106,7 @@
     display: none;
 }
 .alert {
-    background-color: #3cc479;
+    background-color: #18e26f;
     background-image: -webkit-linear-gradient(135deg, transparent,
                       transparent 25%, hsla(0,0%,0%,.05) 25%,
                       hsla(0,0%,0%,.05) 50%, transparent 50%,
