create charity page

--- a/CapEAT/UI_CapEat/src/app/nav/nav.component.html
+++ b/CapEAT/UI_CapEat/src/app/nav/nav.component.html
@@ -47,8 +47,14 @@
           </div>
         </li> -->
 
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="text-blue" href="#/charity">Charity | </a>
+        </li>
+
+        
+
       <li class="nav-item">
-        <a class="nav-link" href="#" id="text-blue" href="#">About Capeat | </a>
+        <a class="nav-link" href="#" id="text-blue" href="#/about">About Capeat | </a>
       </li>
 
       <li class="nav-item">
