--- a/CapEAT/UI_CapEat/src/app/payment/payment.component.html
+++ b/CapEAT/UI_CapEat/src/app/payment/payment.component.html
@@ -132,7 +132,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="cc-number" class="control-label mb-1">Existing Card number</label>
-                                <input id="cc-number" name="cc-number" type="tel" readonly [value]="existingcard" class="form-control cc-number identified visa" value="" data-val="true"
+                                <input id="cc-number" name="cc-number" type="tel" readonly [value]="existingcard" class="form-control cc-number" value="" data-val="true"
                                     data-val-required="Please enter the card number" data-val-cc-number="Please enter a valid card number"
                                     autocomplete="cc-number">
                                 <span class="help-block" data-valmsg-for="cc-number" data-valmsg-replace="true"></span>
