--- a/CapEAT/UI_CapEat/src/app/Addcart/addcart.component.html
+++ b/CapEAT/UI_CapEat/src/app/Addcart/addcart.component.html
@@ -40,7 +40,7 @@
                             <input type="range" name="range" [(ngModel)]="product.spice" min="1" max="5" class="slider" /> Level : {{product.spice}}
                         </td>
                         <td>
-                            <select name="singleSelect" [(ngModel)]="product.location">
+                            <select name="singleSelect" [(ngModel)]="product.location" value="WC1">
                                 <option value="WC1">WC1</option>
                                 <option value="WC2">WC2</option>
                                 <option value="WC3">WC3</option>
