--- a/CapEAT/UI_CapEat/src/app/payment/payment.component.html
+++ b/CapEAT/UI_CapEat/src/app/payment/payment.component.html
@@ -161,7 +161,7 @@
                             </form>
                             <div>
 
-                                <a [routerLink]="['/thankyou']" (click)='fetch()' class="btn btn-lg btn-info btn-block">Pay
+                                <a (click)='fetch()' class="btn btn-lg btn-info btn-block">Pay
                                     <i class="fa fa-lock fa-lg"></i>&nbsp;
                                 </a>
 
