--- a/CapEAT/UI_CapEat/src/app/nav/nav.component.html
+++ b/CapEAT/UI_CapEat/src/app/nav/nav.component.html
@@ -48,12 +48,12 @@
         </li> -->
 
       <li class="nav-item">
-        <a class="nav-link" href="#" id="text-blue" href="#">About Capeat | </a>
+        <a class="nav-link" href="#" id="text-blue" href="#">About Capeat  </a>
       </li>
 
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#">Signout |</a>
-      </li>
+      <!-- <li class="nav-item">
+        <a class="nav-link" id="text-blue" [routerLink]="['/signout']">Signout |</a>
+      </li> -->
     </ul>
     
  
