--- a/CapEAT/UI_CapEat/src/app/thankyou/thankyou.component.css
+++ b/CapEAT/UI_CapEat/src/app/thankyou/thankyou.component.css
@@ -20,13 +20,13 @@
  #thanksHeader {
      text-align: center;
      color: white;
-     margin-top: 60px;
+     /* margin-top: 60px; */
  }
 
  #emailHeader {
      text-align: center;
      color: white;
-     margin-top: 30px;
+     margin-top: 25px;
  }
 
  .body {
