--- a/CapEAT/UI_CapEat/src/app/Menu/breakfast.component.html
+++ b/CapEAT/UI_CapEat/src/app/Menu/breakfast.component.html
@@ -29,7 +29,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor='let product of filteredProducts'>
+                    <tr *ngFor='let product of filteredProducts let i=index'>
                         <td>
                             <img *ngIf='showImage'
                                 [src]='product.imageUrl'
@@ -41,7 +41,7 @@
                         <p>{{ product.description }}</td>
                         <td>{{ product.price | currency:'USD':true:'1.2-2'}}</td>
                         <td>
-                                <a [routerLink]="['/payment']" class="btn btn-success btn-block">Pay Now
+                                <a (click)='paynow(i)' class="btn btn-success btn-block">Pay Now
                                     <i class="fa fa-angle-right"></i>
                                 </a>
                                 </td>
