--- a/CapEAT/UI_CapEat/src/app/Menu/breakfast.component.html
+++ b/CapEAT/UI_CapEat/src/app/Menu/breakfast.component.html
@@ -3,6 +3,7 @@
        <h4> {{pageTitle}} </h4>
     </div>
     <div class='panel-body'>
+            <div class="main-menu-pages"></div>
         <div class='row'>
             <div class='col-md-2'>
                 <h4>Filter by:</h4>
