--- a/CapEAT/UI_CapEat/src/app/map/map.component.css
+++ b/CapEAT/UI_CapEat/src/app/map/map.component.css
@@ -43,11 +43,11 @@
 
 #mapHeader {
     text-align: center;
-    color: #3b5466;
+    color: white;
 }
 
 #mapDescription {
     text-align: center;
-    color: #3b5466;
+    color: white;
 }
 
