--- a/CapEAT/UI_CapEat/src/app/payment/payment.component.html
+++ b/CapEAT/UI_CapEat/src/app/payment/payment.component.html
@@ -1,5 +1,6 @@
 <div align="center" style="border:10px" class="med_font">
     <br>
+    <div class="main-menu-pages"></div>
     <label>New Card</label>
     <input name="options" ng-control="options" type="radio" [value]="1" [(ngModel)]="option" id="newcard">
     <label>Existing Card</label>
@@ -11,7 +12,7 @@
         <div class="row">
             <div class="col-12 col-sm-8 col-md-6 col-lg-4 mx-auto mx-auto">
                 <div id="pay-invoice" class="card">
-                    <div class="card-body">
+                    <div class="card-body payment-form">
                         <div class="card-title">
                             <h3 class="text-center">Pay</h3>
                         </div>
@@ -104,9 +105,9 @@
         <div class="row">
             <div class="col-12 col-sm-8 col-md-6 col-lg-4 mx-auto">
                 <div id="pay-invoice" class="card">
-                    <div class="card-body">
-                        <div class="card-title">
-                            <h3 class="text-center">Pay Invoice</h3>
+                    <div class="card-body payment-form">
+                        <div class="card-title ">
+                            <h3 class="text-center">Pay</h3>
                         </div>
                         <hr>
                         <form action="" method="post" novalidate="novalidate">
