--- a/CapEAT/UI_CapEat/src/app/thankyou/thankyou.component.html
+++ b/CapEAT/UI_CapEat/src/app/thankyou/thankyou.component.html
@@ -1,5 +1,8 @@
 <body>
 <div class="container-fluid">
+    <div class="main-menu-pages"></div>
+    <br>
+    
   <h1 class="display-3" id="thanksHeader" style="margin-left: 50px;"><font color="white">Thank You for doing the business with us!!!</font></h1>
   
   <h3 class="display-3" id="thanksHeader" style="font-size:25px;">Your order is confirmed and here is your order Id {{this.orderid}}.</h3>
