--- a/CapEAT/UI_CapEat/src/app/about/about.component.html
+++ b/CapEAT/UI_CapEat/src/app/about/about.component.html
@@ -1,9 +1,11 @@
 <!-- Jagatha -->
-
+<html>
 <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+    <div class="main-menu-pages"></div>
     <div class="card">
         <img class="card-img-top" src="http://success-at-work.com/wp-content/uploads/2015/04/free-stock-photos.gif">
         <div class="card-block">
+
             <figure class="profile">
                 <img src="http://success-at-work.com/wp-content/uploads/2015/04/free-stock-photos.gif" class="profile-avatar" alt="">
             </figure>
@@ -14,7 +16,7 @@
                 <a>To Be Full Stack Developer</a>
             </div>
             <div class="card-text">
-            Jagatha is used to be a Test Lead on a Card Team and join this bootcamp.
+                Jagatha is used to be a Test Lead on a Card Team and join this bootcamp.
             </div>
         </div>
         <div class="card-footer">
@@ -26,6 +28,8 @@
 
 <!-- Akila -->
 <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+
+    <div class="main-menu-pages"></div>
     <div class="card">
         <img class="card-img-top" src="http://success-at-work.com/wp-content/uploads/2015/04/free-stock-photos.gif">
         <div class="card-block">
@@ -39,7 +43,7 @@
                 <a>To Be Full Stack Developer</a>
             </div>
             <div class="card-text">
-            Akila is used to be a Test Lead on a Card Team and join this bootcamp.
+                Akila is used to be a Test Lead on a Card Team and join this bootcamp.
             </div>
         </div>
         <div class="card-footer">
@@ -53,6 +57,8 @@
 <!-- Puru -->
 
 <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+
+    <div class="main-menu-pages"></div>
     <div class="card">
         <img class="card-img-top" src="http://success-at-work.com/wp-content/uploads/2015/04/free-stock-photos.gif">
         <div class="card-block">
@@ -66,7 +72,7 @@
                 <a>To Be Full Stack Developer</a>
             </div>
             <div class="card-text">
-            Puru is used to be a Test Lead on a Card Team and join this bootcamp.
+                Puru is used to be a Test Lead on a Card Team and join this bootcamp.
             </div>
         </div>
         <div class="card-footer">
@@ -78,6 +84,8 @@
 
 <!-- Donna -->
 <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+
+    <div class="main-menu-pages"></div>
     <div class="card">
         <img class="card-img-top" src="http://success-at-work.com/wp-content/uploads/2015/04/free-stock-photos.gif">
         <div class="card-block">
@@ -91,7 +99,7 @@
                 <a>To Be Full Stack Developer</a>
             </div>
             <div class="card-text">
-            Donna is used to be a Test Lead on a Card Team and join this bootcamp.
+                Donna is used to be a Test Lead on a Card Team and join this bootcamp.
             </div>
         </div>
         <div class="card-footer">
@@ -103,6 +111,8 @@
 
 <!-- Uday -->
 <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+
+    <div class="main-menu-pages"></div>
     <div class="card">
         <img class="card-img-top" src="http://success-at-work.com/wp-content/uploads/2015/04/free-stock-photos.gif">
         <div class="card-block">
@@ -116,7 +126,7 @@
                 <a>To Be Full Stack Developer</a>
             </div>
             <div class="card-text">
-            Uday is used to be a Test Lead on a Card Team and join this bootcamp.
+                Uday is used to be a Test Lead on a Card Team and join this bootcamp.
             </div>
         </div>
         <div class="card-footer">
@@ -124,4 +134,7 @@
             <button class="btn btn-secondary float-right btn-sm">Follow</button>
         </div>
     </div>
+<br>
 </div>
+
+</html>
