--- a/CapEAT/UI_CapEat/src/app/nutrition/nutrition.component.css
+++ b/CapEAT/UI_CapEat/src/app/nutrition/nutrition.component.css
@@ -53,7 +53,8 @@ meter::-webkit-meter-optimum-value {
 }
 
 .nutritionHeader {
-    color: #3b5466;
+    color: white;
+    margin-left: 500px;
 }
 
 
