--- a/CapEAT/UI_CapEat/src/app/nutrition/nutrition.component.html
+++ b/CapEAT/UI_CapEat/src/app/nutrition/nutrition.component.html
@@ -18,7 +18,9 @@ tr:nth-child(even) {
 </head>
 <body>
   <div class="container-fluid">
-    <h1 class="nutritionHeader">Nutrition Information:</h1>
+      <div class="main-menu-pages">
+    <h1 class="nutritionHeader">Nutrition Information</h1>
+  </div>
   </div>
 <table class="menuTable">
   <tr class="tableRow">
