fixing charity styles

--- a/CapEAT/UI_CapEat/src/app/charity/charity.component.css
+++ b/CapEAT/UI_CapEat/src/app/charity/charity.component.css
@@ -1,9 +1,6 @@
 
 
-.img_class {
-    width:260px;
-    height:250px;
-}
+
 
 .chefHeader {
     text-align: center;
@@ -22,7 +19,7 @@
     background-color: #7395AE;
 }
 
-#breakfastMenu {
+.image {
     margin: auto;
     display: block;
     width: 400px;
@@ -30,15 +27,7 @@
     height: auto;
 }
 
-#lunchMenu {
-    margin: auto;
-    display: block;
-    width: 400px;
-    max-width: 100%;
-    height: auto;
-}
-
-.container {
+.container-fluid {
     width: 750px;
     height: 600px;
    
