--- a/CapEAT/UI_CapEat/src/app/charity/charity.component.html
+++ b/CapEAT/UI_CapEat/src/app/charity/charity.component.html
@@ -7,11 +7,13 @@
   <body style="background-color: #7395AE">
       <div class="container-fluid">
   <h1 class="chefHeader">Do Good Have Good</h1>
+  
   <h4 class="subheader">Our website support few Charity organization. </h4>
   
+  <br>
   
   <a href="https://feedmore.org/">
-      <img src="././assets/images/feedmore.jpg" id="FeedMore" class="image pic">
+      <img src="././assets/images/feedmore.jpg" id="FeedMore" class="image">
       </a>
 
       
