--- a/CapEAT/UI_CapEat/src/app/charity/charity.component.html
+++ b/CapEAT/UI_CapEat/src/app/charity/charity.component.html
@@ -10,13 +10,11 @@
             <br>
 
   <h1 class="chefHeader">Do Good Have Good</h1>
-  
   <h4 class="subheader">Our website support few Charity organization. </h4>
   
-  <br>
   
   <a href="https://feedmore.org/">
-      <img src="././assets/images/feedmore.jpg" id="FeedMore" class="image">
+      <img src="././assets/images/feedmore.jpg" id="FeedMore" class="image pic">
       </a>
 
       
