--- a/CapEAT/UI_CapEat/src/app/special/special.component.css
+++ b/CapEAT/UI_CapEat/src/app/special/special.component.css
@@ -1,32 +1,16 @@
-
-.body {
-    background-color: #7395AE;
-    
+.main{
+    background: black;
+    text-align: -webkit-center;
+    font-size: 16px;
+    color: blueviolet;
 }
 
-  .container-fluid {
-    background-color: #7395AE;
-    margin-top: 0px;
-    height: 700px;
- 
-
+.header{
+    font-size: -webkit-xxx-large;
+    color: blue;
 }
 
-.calendar {
-    margin-left: 20%;
+.img_class {
+    width:260px;
+    height:250px;
 }
-
-.calendarHeader {
-    text-align: center;
-    color: #3b5466;
-}
-
-.calendarSubheader {
-    text-align: center;
-    color: #3b5466;
-}
-
-
-
-
-
