--- a/CapEAT/UI_CapEat/src/app/special/special.component.css
+++ b/CapEAT/UI_CapEat/src/app/special/special.component.css
@@ -1,16 +1,29 @@
-.main{
-    background: black;
-    text-align: -webkit-center;
-    font-size: 16px;
-    color: blueviolet;
+.body {
+    background-color: #7395AE;
+    
 }
 
-.header{
-    font-size: -webkit-xxx-large;
-    color: blue;
+  .container-fluid {
+    background-color: #7395AE;
+    margin-top: 0px;
+    height: 600px;
+ 
+
 }
 
-.img_class {
-    width:260px;
-    height:250px;
+.calendar {
+    margin-left: 20%;
 }
+
+.calendarHeader {
+    text-align: center;
+    color: #3b5466;
+}
+
+
+.calendarSubheader {
+    text-align: center;
+    color: #3b5466;
+}
+
+
