--- a/CapEAT/UI_CapEat/src/app/Addcart/addcart.component.html
+++ b/CapEAT/UI_CapEat/src/app/Addcart/addcart.component.html
@@ -100,11 +100,11 @@
                         </td>
                         <td colspan="6" class="hidden-xs"></td>
                         <td>
-                            <!-- <div  *ngIf="this.userStatus === 'HasData'"> -->
+                            <div  *ngIf="this.userStatus === 'HasData'">
                             <a [routerLink]="['/payment']" class="btn btn-success btn-block">Checkout
                                     <i class="fa fa-angle-right"></i>
                             </a>
-                            <!-- </div> -->
+                            </div>
                         <div  *ngIf="this.userStatus === 'NoData'">
                             <a [routerLink]="['/paymentone']" class="btn btn-success btn-block">Checkout
                                     <i class="fa fa-angle-right"></i>
@@ -121,4 +121,3 @@
     <br>
     <br>
     </html>
-    
