update footer UI

--- a/CapEAT/UI_CapEat/src/app/about/about.component.html
+++ b/CapEAT/UI_CapEat/src/app/about/about.component.html
@@ -1,5 +1,6 @@
 <!-- Jagatha -->
 <html>
+        <div class="container-fluid">
 <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
     <div class="main-menu-pages"></div>
     <div class="card">
@@ -110,7 +111,7 @@
 </div>
 
 <!-- Uday -->
-<div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+<!-- <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
 
     <div class="main-menu-pages"></div>
     <div class="card">
@@ -133,8 +134,8 @@
             <small>Last updated 3 mins ago</small>
             <button class="btn btn-secondary float-right btn-sm">Follow</button>
         </div>
-    </div>
-<br>
-</div>
+    </div> -->
 
+<!-- </div> -->
+</div>
 </html>
