--- a/CapEAT/UI_CapEat/src/app/footer/footer.component.html
+++ b/CapEAT/UI_CapEat/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar">
+<nav class="navbar page-footer-container">
 
   <!--Footer-->
   <footer class="page-footer mdb-color">
@@ -19,7 +19,7 @@
     <div class="footer-copyright">
       <div class="container-fluid">
        
-        <h6 align="center" class="color" class=".us">
+        <h6 align="center" class=".us">
             Having trouble?
             <a href="mailto:angulareater@capone.com">Contact us</a>
         </h6>
