--- a/CapEAT/UI_CapEat/src/app/about/about.component.css
+++ b/CapEAT/UI_CapEat/src/app/about/about.component.css
@@ -112,3 +112,8 @@ h5 {
 .meta a:hover {
     color: rgba(0, 0, 0, .87);
 }
+
+.container-fluid {
+    background-color: #7395AE;
+    height: 700px;
+}
